--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,5 @@
 @import "base/variables";
 @import "./componentes/main";
 @import "./componentes/footer";
+@import "./base/extends";
+@import "./base/mixin"
