--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
   background-color: #fff;
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 .header-cont .logo-header img {
   width: 60%;
@@ -35,6 +36,11 @@ body {
 .header-cont .navbar-nav a {
   color: rgb(6, 113, 200);
   font-size: 1.5rem;
+  transition: 1s;
+}
+.header-cont .navbar-nav a:hover {
+  transform: scale(1.3);
+  color: rgb(11, 11, 118);
 }
 
 @media screen and (max-width: 575px) {
@@ -66,20 +72,14 @@ body {
 }
 
 /*MAIN INICIO*/
-.banner-index img {
-  width: 100%;
-  height: 15rem;
-}
-
-@media screen and (max-width: 575px) {
-  .banner-index img {
-    display: none;
-  }
-}
 .sumergite-cont {
+  background-image: url(/multimedia/imagenes/banner-logo2.png);
+  color: #fff;
   width: 100%;
   margin-top: 2rem;
   margin-bottom: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
   transition: 1s;
 }
@@ -94,36 +94,19 @@ body {
   }
 }
 .menu-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-left: 2.5rem;
-}
-.menu-main a {
   transition: 1s;
 }
-.menu-main a:hover {
+.menu-main:hover {
   transform: scale(1.1);
 }
-.menu-main a img {
-  width: 90%;
-  border-radius: 10%;
-  gap: 3rem;
-}
 
-@media screen and (max-width: 575px) {
-  .menu-main {
-    display: block;
-  }
-  .menu-main a img {
-    margin-bottom: 5%;
-  }
-}
 .iframe-cont {
   display: flex;
   padding: 3rem 3rem 2rem 2rem;
   gap: 1rem;
   margin-top: 6rem;
   /*MIXIN*/
+  justify-content: center;
   background-color: rgb(6, 113, 200);
 }
 .iframe-cont iframe {
@@ -211,6 +194,24 @@ body {
     height: auto;
   }
 }
+.trabajosimg-cont {
+  display: grid;
+  gap: 1rem;
+  margin: 2rem;
+  grid-template-columns: 3fr 3fr 3fr;
+  grid-template-rows: 3fr 3fr 3fr;
+}
+
+.trabajo-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1%;
+  transition: 1s;
+}
+.trabajo-img:hover {
+  transform: scale(1.1);
+}
+
 .contacto-cont, .nosotros-cont, .servicios-cont, .trabajos-cont {
   text-align: center;
   margin-top: 4rem;
@@ -251,9 +252,6 @@ body {
 }
 .footer-cont .rrss-cont .rrss li {
   list-style: none;
-}
-.footer-cont .logo-footer {
-  margin-left: 8rem;
 }
 .footer-cont .logo-footer img {
   width: 30%;
