--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -15,13 +15,19 @@ body{
     background-color:$colorBlanco;
     width: 100%;
     display: flex;
+    justify-content: space-between;
         .logo-header img{
             width: 60%;
             margin-right: 50%;
             }
         .navbar-nav a{
-           color: $colorCeleste;
+            color: $colorCeleste;
            font-size: 1.5rem;
+           transition: 1s;
+            &:hover{
+            transform: scale(1.3);
+            color: rgb(11, 11, 118);
+             }
             }
 
 
